edit admin panel

--- a/templates/admin_panel/base.html
+++ b/templates/admin_panel/base.html
@@ -245,6 +245,18 @@ a.article:hover {
         <a href="{% url 'index_product' %}"><i class="fa fa-product-hunt" aria-hidden="true"></i> Product</a>
       </li>
       <li>
+        <a href="{% url 'index_product' %}"><i class="fa fa-first-order" aria-hidden="true"></i> Order</a>
+      </li>
+      <li>
+        <a href="{% url 'index_product' %}"><i class="fa fa-child" aria-hidden="true"></i> Customer</a>
+      </li>
+      <li>
+        <a href="{% url 'index_product' %}"><i class="fa fa-user" aria-hidden="true"></i> User</a>
+      </li>
+      <li>
+        <a href="{% url 'index_product' %}"><i class="fa fa-list-alt" aria-hidden="true"></i> Orderd Item</a>
+      </li>
+      <li>
         <a
           href="#pageSubmenu"
           data-toggle="collapse"
