--- a/templates/admin_panel/products/create.html
+++ b/templates/admin_panel/products/create.html
@@ -19,48 +19,43 @@
 
         <div class="row">
             <div class="col-6">
-                <label>User name</label>
-                <input type="text" name="user_name" class="form-control" placeholder="ayan123">
+                <label>Name</label>
+                <input type="text" name="product_name" class="form-control" placeholder="Product Name">
                 <br>
             </div>
             <div class="col-6">
-                <label>Date Of Birth</label>
-                <input type="date" name="dob" class="form-control">
+                <label>Digital</label>
+                <input type="text" name="dob" class="form-control" placeholder="Digital">
                 <br>
             </div>
         </div>
 
+        <div class="">
+                <label>Price</label>
+                <input type="number" name="first_name" class="form-control" placeholder="Price">
+                <br>
+            </div>
+
 
         <div class="row">
-            <div class="col-6">
-                <label>First Name</label>
-                <input type="text" name="first_name" class="form-control" placeholder="First name">
+            
+            <div class="col-4">
+                <label>Image 1</label>
+                <input type="file" name="last_name" class="form-control" placeholder="Last name">
                 <br>
             </div>
-            <div class="col-6">
-                <label>Last Name</label>
-                <input type="text" name="last_name" class="form-control" placeholder="Last name">
+            <div class="col-4">
+                <label>Image 2</label>
+                <input type="file" name="last_name" class="form-control" placeholder="Last name">
                 <br>
             </div>
-        </div>
-        <label>Email</label>
-        <input type="text" name="email" class="form-control" placeholder="gym@gmail.com">
-        <br>
-        <div class="row">
-            <div class="col-6">
-                <label>Mobile</label>
-                <input type="text" name="mobile" class="form-control" placeholder="017*****">
-                <br>
-            </div>
-            <div class="col-6">
-                <label>Address</label>
-                <input type="text" name="address" class="form-control" placeholder="address">
+            <div class="col-4">
+                <label>Image 3</label>
+                <input type="file" name="last_name" class="form-control" placeholder="Last name">
                 <br>
             </div>
         </div>
-        <label>Fees</label>
-                <input type="text" name="fees" class="form-control" placeholder="1440.00">
-        <br>
+       
 
 
 
