--- a/templates/admin_panel/products/index.html
+++ b/templates/admin_panel/products/index.html
@@ -14,21 +14,46 @@
 <table class="table table-striped" id="myTable">
   <thead>
     <tr>
-      <th scope="col">User name</th>
-      <th scope="col">First Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Address</th>
-      <th scope="col">Fees</th>
+      <th scope="col">Name</th>
+      <th scope="col">Price</th>
+      <th scope="col">Digital</th>
+      <th scope="col">Image1</th>
+      <th scope="col">Image2</th>
+      <th scope="col">Image3</th>
       <th scope="col">Action</th>
     </tr>
   </thead>
 
   <tr>
-    <td>Ayan12</td>
-    <td>Ayan</td>
-    <td>Chowdhury</td>
-    <td>aaiz97@gmail.com</td>
-    <td>121212</td>
+    <td>i phone 10</td>
+    <td>60000</td>
+    <td>Digital</td>
+    <td>null</td>
+     <td>null</td>
+      <td>null</td>
+    
+    <td>
+      <form action="" method="POST" onsubmit="return confirm('Are you sure?');">
+        <a class="btn btn-primary" href=""
+          ><i class="fa fa-eye" aria-hidden="true"></i
+        ></a>
+        <a class="btn btn-warning m-2" href=""
+          ><i class="fa fa-pencil-square-o" aria-hidden="true"></i
+        ></a>
+
+        <button class="btn btn-danger" type="submit">
+          <i class="fa fa-trash" aria-hidden="true"></i>
+        </button>
+      </form>
+    </td>
+  </tr>
+   <tr>
+    <td>i phone 11</td>
+    <td>80000</td>
+    <td>Digital</td>
+    <td>null</td>
+     <td>null</td>
+      <td>null</td>
     <td>
       <form action="" method="POST" onsubmit="return confirm('Are you sure?');">
         <a class="btn btn-primary" href=""
@@ -45,5 +70,6 @@
     </td>
   </tr>
 
-  {% endblock content %}
+  
 </table>
+{% endblock content %}
