--- a/templates/admin_panel/base.html
+++ b/templates/admin_panel/base.html
@@ -257,6 +257,9 @@ a.article:hover {
         <a href="{% url 'index_product' %}"><i class="fa fa-list-alt" aria-hidden="true"></i> Orderd Item</a>
       </li>
       <li>
+        <a href="{% url 'index_product' %}"><i class="fa fa-map-marker" aria-hidden="true"></i> ShippingAddress</a>
+      </li>
+      <li>
         <a
           href="#pageSubmenu"
           data-toggle="collapse"
