--- a/templates/admin_panel/base.html
+++ b/templates/admin_panel/base.html
@@ -321,8 +321,28 @@ a.article:hover {
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="nav navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Page</a>
+              <a class="nav-link" href="#" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Contact</a>
             </li>
+            <!--modal-->
+            <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+       <div class="modal-header">
+        <h5 class="modal-title">Contact With super admin</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Modal body text goes here.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
             <li class="nav-item">
               <a class="nav-link" href="#">Page</a>
             </li>
@@ -330,7 +350,7 @@ a.article:hover {
               <a class="nav-link" href="#">Page</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> Log in</a>
+              <a class="nav-link" href="{% url 'admin_panelLogIn' %}"><i class="fa fa-sign-in" aria-hidden="true"></i> Log Out</a>
             </li>
           </ul>
         </div>
