--- a/templates/user_panel/cart.html
+++ b/templates/user_panel/cart.html
@@ -14,7 +14,7 @@
 						<th><h5>Items: <strong>3</strong></h5></th>
 						<th><h5>Total:<strong> $42</strong></h5></th>
 						<th>
-							<a  style="float:right; margin:5px;" class="btn btn-success" href="">Checkout</a>
+							<a  style="float:right; margin:5px;" class="btn btn-success" href="{% url 'user_checkout' %}">Checkout</a>
 						</th>
 					</tr>
 				</table>
