--- a/templates/user_panel/home.html
+++ b/templates/user_panel/home.html
@@ -1,9 +1,47 @@
 {% extends 'user_panel/base.html' %}
-
+{% load static %}
 {% block content %}
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="box-element">
+            <h3 class="text-center">Predict A mobile Price</h3>
 
-<h1>hellow</h1>
+				<form>
 
+                <div class="row mt-5">
+               
+                <div class="col-3">
+                 <label>Model </label>
+                 <br>
+                <input type="text" class="form-control">
+                </br>
+                </div>
+                <div class="col-3">
+                <label>Rom</label>
+                 <br>
+                <input type="text" class="form-control">
+                </br>
+                </div>
+                <div class="col-3">
+                <label>Ram </label>
+                 <br>
+                <input type="text" class="form-control">
+                </br>
+                </div>
+                <div class="col-3">
+                <label>Cammera</label>
+                 <br>
+                <input type="text" class="form-control">
+                </br>
+                </div>
+                </div>
+                </form>
+
+			</div>
+
+			<br>
+		</div>
+	</div>
 {% endblock content %}
 
 
