add home predict form

--- a/templates/user_panel/home.html
+++ b/templates/user_panel/home.html
@@ -11,30 +11,56 @@
                 <div class="row mt-5">
                
                 <div class="col-3">
-                 <label>Model </label>
-                 <br>
-                <input type="text" class="form-control">
-                </br>
+                 <div class="form-group">
+    <label for="exampleFormControlSelect1">Model</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>I phone</option>
+      <option>Samsung</option>
+      <option>Nokia</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+  </div>
+
                 </div>
                 <div class="col-3">
-                <label>Rom</label>
-                 <br>
-                <input type="text" class="form-control">
-                </br>
+                 <div class="form-group">
+    <label for="exampleFormControlSelect1">ROM</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>16 Gb</option>
+      <option>32 Gb</option>
+      <option>Nokia</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+  </div>
                 </div>
                 <div class="col-3">
-                <label>Ram </label>
-                 <br>
-                <input type="text" class="form-control">
-                </br>
+                 <div class="form-group">
+    <label for="exampleFormControlSelect1">RAM</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>1 Gb</option>
+      <option>2 Gb</option>
+      <option>Nokia</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+  </div>
                 </div>
                 <div class="col-3">
-                <label>Cammera</label>
-                 <br>
-                <input type="text" class="form-control">
-                </br>
+                <div class="form-group">
+    <label for="exampleFormControlSelect1">Cammerra</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>16 mp</option>
+      <option>32 mp</option>
+      <option>Nokia</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+  </div>
                 </div>
                 </div>
+                <a class="btn btn-info text-center" href="">Predict</a>
                 </form>
 
 			</div>
