--- a/templates/user_panel/base.html
+++ b/templates/user_panel/base.html
@@ -10,6 +10,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+   <script>
+ var user = '{{request.user}}'
+ </script>
+
   
 </head>
 <body>
@@ -50,6 +55,7 @@
     {% endblock content %}
     </div>
 
+ <script  src="{% static 'user/js/cart.js' %}"></script>
 
 
 </body>
