--- a/templates/user_panel/cart.html
+++ b/templates/user_panel/cart.html
@@ -1,51 +1,71 @@
-{% extends 'user_panel/base.html' %}
-{% load static %}
-{% block content %}
-	<div class="row">
-		<div class="col-lg-12">
-			<div class="box-element">
+{% extends 'user_panel/base.html' %} {% load static %} {% block content %}
+<div class="row">
+  <div class="col-lg-12">
+    <div class="box-element">
+      <a class="btn btn-outline-dark" href="{% url 'user_store' %}"
+        >&#x2190; Continue Shopping</a
+      >
 
-				<a  class="btn btn-outline-dark" href="{% url 'user_store' %}">&#x2190; Continue Shopping</a>
+      <br />
+      <br />
+      <table class="table">
+        <tr>
+          <th>
+            <h5>Items: <strong>{{order.get_cart_items}}</strong></h5>
+          </th>
+          <th>
+            <h5>
+              Total:<strong> ${{order.get_cart_total|floatformat:2}}</strong>
+            </h5>
+          </th>
+          <th>
+            <a
+              style="float: right; margin: 5px"
+              class="btn btn-success"
+              href="{% url 'user_checkout' %}"
+              >Checkout</a
+            >
+          </th>
+        </tr>
+      </table>
+    </div>
 
-				<br>
-				<br>
-				<table class="table">
-					<tr>
-						<th><h5>Items: <strong>{{order.get_cart_items}}</strong></h5></th>
-						<th><h5>Total:<strong> ${{order.get_cart_total|floatformat:2}}</strong></h5></th>
-						<th>
-							<a  style="float:right; margin:5px;" class="btn btn-success" href="{% url 'user_checkout' %}">Checkout</a>
-						</th>
-					</tr>
-				</table>
+    <br />
+    <div class="box-element">
+      <div class="cart-row">
+        <div style="flex: 2"></div>
+        <div style="flex: 2"><strong>Item</strong></div>
+        <div style="flex: 1"><strong>Price</strong></div>
+        <div style="flex: 1"><strong>Quantity</strong></div>
+        <div style="flex: 1"><strong>Total</strong></div>
+      </div>
 
-			</div>
+      {% for item in items %}
 
-			<br>
-			<div class="box-element">
-				<div class="cart-row">
-					<div style="flex:2"></div>
-					<div style="flex:2"><strong>Item</strong></div>
-					<div style="flex:1"><strong>Price</strong></div>
-					<div style="flex:1"><strong>Quantity</strong></div>
-					<div style="flex:1"><strong>Total</strong></div>
-				</div>
+      <div class="cart-row">
+        <div style="flex: 2">
+          <img class="row-image" src="{{item.product.imageURL1}}" />
+        </div>
+        <div style="flex: 2" class="mt-3"><p>{{item.product.name}}</p></div>
+        <div style="flex: 1" class="mt-3"><p>{{item.product.price|floatformat:2}}</p></div>
+        <div style="flex: 1">
+          <div class="align-self-start">
+          <a href="#" data-product={{item.product.id}} data-action="add" class="update-cart">
+            <i class="fa fa-arrow-up" aria-hidden="true"></i>
+            </a>
+          </div>
+          <div class="align-self-end">{{item.quantity}}</div>
+          <div class="align-self-center">
+          <a href="#" data-product={{item.product.id}} data-action="remove" class="update-cart">
+            <i class="fa fa-arrow-down" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+        <div style="flex: 1" class="mt-3"><p>${{item.get_total}}</p></div>
+      </div>
 
-				{% for item in items %}
-				
-				<div class="cart-row">
-					<div style="flex:2"><img class="row-image" src="{{item.product.imageURL1}}"></div>
-					<div style="flex:2"><p>{{item.product.name}}</p></div>
-					<div style="flex:1"><p>{{item.product.price|floatformat:2}}</p></div>
-					<div style="flex:1">
-						<p class="quantity">{{item.quantity}}</p>
-					</div>
-					<div style="flex:1"><p>${{item.get_total}}</p></div>
-				</div>
-
-				{% endfor %}
-
-			</div>
-		</div>
-	</div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
 {% endblock content %}
