--- a/templates/user_panel/store.html
+++ b/templates/user_panel/store.html
@@ -8,8 +8,8 @@
       <h6><strong>{{product.name}}</strong></h6>
       <hr />
 
-      <button data-product={{product.id}} data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
-      <a class="btn btn-outline-success" href="#">View</a>
+      <button data-product={{product.id}} data-action="add" class="btn btn-outline-secondary add-btn update-cart"><i class="fa fa-cart-plus" aria-hidden="true"></i></button>
+      <a class="btn btn-outline-success" href="#"><i class="fa fa-eye" aria-hidden="true"></i></a>
       <h4 style="display: inline-block; float: right"><strong>{{product.price|floatformat:2}}</strong></h4>
     </div>
   </div>
