--- a/templates/user_panel/base.html
+++ b/templates/user_panel/base.html
@@ -9,7 +9,10 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="{% static 'user/css/style.css' %}" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -39,6 +42,57 @@
     </script>
   </head>
   <body>
+    <div class="bg-warning d-flex justify-content-between">
+    <div class="container">
+    <div class="d-flex flex-row-reverse">
+  <div class="p-2">
+
+
+   {% if user.is_authenticated %}
+
+      
+            
+
+            <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <i class="fa fa-user" aria-hidden="true"></i> welcome
+            {{request.user.username}}
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+  <a class="dropdown-item" href="#"><i class="fa fa-eye" aria-hidden="true"></i> View Profile</a>
+    <a class="dropdown-item" href="#"><i class="fa fa-sign-out" aria-hidden="true"></i> Log Out</a>
+    
+  </div>
+</div>
+          
+     
+
+      {% else %}
+
+      login
+
+      {% endif %}
+  
+  
+  
+  </div>
+  <div class="p-2 ml-4 mr-4">
+
+   <div>
+         <input type="search" class="form-control ml-md-4" />
+
+          </div>
+  
+  
+  
+  
+  </div>
+  <div class="p-2">Help : 01759773446</div>
+</div>
+     
+     
+    </div>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="{% url 'user_home' %}">Ecom</a>
       <button
@@ -67,15 +121,12 @@
           </li>
         </ul>
         <div class="form-inline my-2 my-lg-0">
-          <a href="#" class="btn btn-warning">Login</a>
-
           <a href="{% url 'user_cart' %}">
             <img id="cart-icon" src="{% static 'images/cart.png' %}" />
           </a>
           <p id="cart-total">{{cartItems}}</p>
 
-          <input type="text" class="form-control ml-md-4" />
-          <a href="" class="btn btn-danger">Search</a>
+       
         </div>
       </div>
     </nav>
