--- a/templates/user_panel/base.html
+++ b/templates/user_panel/base.html
@@ -42,11 +42,61 @@
     </script>
   </head>
   <body>
-    <div class="bg-warning d-flex justify-content-between">
-    <div class="container">
-    <div class="d-flex flex-row-reverse">
-  <div class="p-2">
 
+
+  <nav class="navbar navbar-expand-md navbar-dark bg-warning p-0">
+    <div class="d-flex w-50 order-0">
+        <a class="navbar-brand mr-1" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+    <div class="navbar-collapse collapse justify-content-center order-2" id="collapsingNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'user_home' %}">Home <span class="sr-only">Home</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'user_store' %}">Store</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+        </ul>
+    </div>
+    <span class="navbar-text small text-truncate mt-1 w-50 text-right order-1 order-md-last">
+    
+    
+    
+    
+    </span>
+</nav>
+    
+
+
+
+
+
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="{% url 'user_home' %}">Ecom</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+         
+              <div class="d-flex flex-row">
+  <div class="">
 
    {% if user.is_authenticated %}
 
@@ -69,57 +119,36 @@
 
       {% else %}
 
-      login
+      <a class="btn btn-secondary">Login</a>
 
       {% endif %}
   
   
   
   </div>
-  <div class="p-2 ml-4 mr-4">
-
-   <div>
-         <input type="search" class="form-control ml-md-4" />
-
-          </div>
-  
-  
-  
-  
-  </div>
-  <div class="p-2">Help : 01759773446</div>
 </div>
-     
-     
-    </div>
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'user_home' %}">Ecom</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'user_store' %}"
-              >Store <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'user_store' %}"
-              >Contact <span class="sr-only">(current)</span></a
-            >
-          </li>
         </ul>
+
+    
+
+
+
+
+
+
+         <div class="form-inline my-2 my-lg-0 text-center">
+         <div class="d-flex flex-row">
+  <div class=""> 
+  
+  <input type="search" class="form-control" /></div>
+
+
+  <div class=""> <a class="btn btn-danger" href="#">Search<a/></div>
+  
+</div>
+
+       
+        </div>
         <div class="form-inline my-2 my-lg-0">
           <a href="{% url 'user_cart' %}">
             <img id="cart-icon" src="{% static 'images/cart.png' %}" />
