--- a/static/user/css/style.css
+++ b/static/user/css/style.css
@@ -95,9 +95,16 @@ h1,h2,h3,h4,h5,h6{
 
 
 .hidden{
-	display: none!important;
+	display: none !important;
 }
 
 .b-inp {
     max-width: 280px;
+}
+
+.btn{
+	font-size: 13px !important;
+}
+.form-control{
+	font-size: 13px !important;
 }
