--- a/templates/user_panel/base.html
+++ b/templates/user_panel/base.html
@@ -44,33 +44,17 @@
   <body>
 
 
-  <nav class="navbar navbar-expand-md navbar-dark bg-warning p-0">
-    <div class="d-flex w-50 order-0">
-        <a class="navbar-brand mr-1" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-    <div class="navbar-collapse collapse justify-content-center order-2" id="collapsingNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'user_home' %}">Home <span class="sr-only">Home</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'user_store' %}">Store</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-            </li>
-        </ul>
-    </div>
-    <span class="navbar-text small text-truncate mt-1 w-50 text-right order-1 order-md-last">
-    
-    
-    
-    
-    </span>
-</nav>
+<div class="row bg-warning">
+<div class="col-4">
+</div>
+<div class="col-4 text-center">
+<a href="{% url 'user_home' %}" class="ml-2">Home</a>
+<a href="{% url 'user_store' %}">Store</a>
+<a href="{% url 'user_store' %}">Contact</a>
+</div>
+<div class="col-4">
+</div>
+</div>
     
 
 
@@ -78,7 +62,7 @@
 
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark  ">
       <a class="navbar-brand" href="{% url 'user_home' %}">Ecom</a>
       <button
         class="navbar-toggler"
@@ -104,7 +88,7 @@
             
 
             <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <button class="btn btn-secondary dropdown-toggle btns" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="fa fa-user" aria-hidden="true"></i> welcome
             {{request.user.username}}
   </button>
@@ -119,7 +103,7 @@
 
       {% else %}
 
-      <a class="btn btn-secondary">Login</a>
+      <a class="btn btn-secondary btns">Login</a>
 
       {% endif %}
   
@@ -127,8 +111,11 @@
   
   </div>
 </div>
+
         </ul>
 
+        
+        
     
 
 
@@ -136,9 +123,20 @@
 
 
 
-         <div class="form-inline my-2 my-lg-0 text-center">
+        
+        <div class="form-inline my-2 my-lg-0">
+          <a href="{% url 'user_cart' %}">
+            <img id="cart-icon" src="{% static 'images/cart.png' %}" />
+          </a>
+          <p id="cart-total">{{cartItems}}</p>
+
+       
+        </div>
+
+
+        <div class="form-inline my-2 my-lg-0 text-center">
          <div class="d-flex flex-row">
-  <div class=""> 
+  <div class="ml-3"> 
   
   <input type="search" class="form-control" /></div>
 
@@ -149,14 +147,7 @@
 
        
         </div>
-        <div class="form-inline my-2 my-lg-0">
-          <a href="{% url 'user_cart' %}">
-            <img id="cart-icon" src="{% static 'images/cart.png' %}" />
-          </a>
-          <p id="cart-total">{{cartItems}}</p>
 
-       
-        </div>
       </div>
     </nav>
 
