--- a/templates/user_panel/search.html
+++ b/templates/user_panel/search.html
@@ -38,7 +38,7 @@
 
 
 
-        <a class="text-style" href=""><span><i class="fa fa-plus-circle" aria-hidden="true"></i> Go to Blog Page</span></a>
+        <a class="text-style" href="{% url 'user_home' %}"><span><i class="fa fa-plus-circle" aria-hidden="true"></i> Go to Home Page</span></a>
 </div>
 </div>
        {% else %}
