--- a/templates/user_panel/search.html
+++ b/templates/user_panel/search.html
@@ -53,7 +53,7 @@
 
                         <div class="mt-3">
 
-                            <img style="float:left;" class="d-inline-block" src="{{ post.get_photoURL1 }}" height=80;
+                            <img style="float:left;" class="d-inline-block" src="{{ post.imageURL1 }}" height=80;
                                 width=80; alt="abc">
 
 
