--- a/templates/user_panel/store.html
+++ b/templates/user_panel/store.html
@@ -14,7 +14,58 @@
     </div>
   </div>
 
+
+
+
   {% endfor %}
+    
 </div>
+
+<!--pagination-->
+<div class="mt-4">
+ <nav aria-label="Page navigation example">
+
+       {% if products.has_other_pages %}
+  <ul class="pagination">
+    {% if products.has_previous %}
+
+      <li class="page-item ">
+      <a class="page-link" href="?page={{ products.previous_page_number }}" tabindex="-1">Previous</a>
+    </li>
+
+    {% else %}
+        <li class="page-item disabled">
+      <a class="page-link" href="#" tabindex="-1">Previous</a>
+    </li>
+    {% endif %}
+    {% for i in products.paginator.page_range %}
+      {% if products.number == i %}
+
+      <li class="page-item active">
+      <a class="page-link" href="#">{{ i }} <span class="sr-only">(current)</span></a>
+    </li>
+      {% else %}
+      <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+      {% endif %}
+    {% endfor %}
+    {% if products.has_next %}
+       <li class="page-item">
+      <a class="page-link" href="?page={{ products.next_page_number }}">Next</a>
+    </li>
+    {% else %}
+      <li class="page-item disabled">
+      <a class="page-link" href="#" tabindex="-1">Next</a>
+    </li>
+    {% endif %}
+  </ul>
+{% endif %}
+</nav>
+
+</div> <!--ending paginations-->
+
+
+      
+
+
 
 {% endblock content %}
