--- a/templates/user_panel/view.html
+++ b/templates/user_panel/view.html
@@ -8,6 +8,7 @@
 
 <h1>{{pro.name}}</h1>
 <h1>{{pro.price}}</h1>
+<p>{{pro.descriptions}}</p>
 <img src="{{pro.imageURL1}}"/>
 <img src="{{pro.imageURL2}}"/>
 <img src="{{pro.imageURL3}}"/>
