--- a/mobile_store/templates/user_panel/base.html
+++ b/mobile_store/templates/user_panel/base.html
@@ -39,6 +39,32 @@
         return cookieValue;
       }
       var csrftoken = getCookie("csrftoken");
+
+
+     function getCookie(name){
+       var cookieArr = document.cookie.split(";");
+       for(var i = 0; i < cookieArr.length; i++){
+         var cookiePair = cookieArr[i].split("=");
+
+         if(name == cookiePair[0].trim()){
+           return decodeURIComponent(cookiePair[1]);        
+            }
+       }
+       return null;
+     }
+
+     var cart = JSON.parse(getCookie('cart'))
+    
+
+     if(cart == undefined){
+       cart = {}
+       console.log("cart was created")
+       document.cookie = 'cart=' + JSON.stringify(cart) + ";domain=;path=/"
+       //document.cookie = 'cart=' + JSON.stringify(cart)
+
+     }
+      console.log("cart", cart);
+
     </script>
   </head>
   <body>
