--- a/mobile_store/templates/user_panel/home.html
+++ b/mobile_store/templates/user_panel/home.html
@@ -55,7 +55,7 @@
       <option>32 mp</option>
       <option>Nokia</option>
       <option>4</option>
-      <option>5</option>
+      {% comment %} <option>5</option> {% endcomment %}
     </select>
   </div>
                 </div>
