complete e-com website except payments system

--- a/mobile_store/templates/user_panel/checkout.html
+++ b/mobile_store/templates/user_panel/checkout.html
@@ -182,6 +182,13 @@
 	   .then((data) => {
 		   console.log('success : ', data)
 		   alert('Transaction completed');
+      
+      cart = {}
+      document.cookie = 'cart=' + JSON.stringify(cart) + ";domain=;path=/"
+
+
+
+
 		   window.location.href = "{% url 'user_store' %}"
 	   })
    }
