--- a/mobile_store/templates/user_panel/base.html
+++ b/mobile_store/templates/user_panel/base.html
@@ -74,9 +74,9 @@
 <div class="col-4">
 </div>
 <div class="col-4 text-center">
-<a href="{% url 'user_home' %}" class="ml-2">Home</a>
-<a href="{% url 'user_store' %}">Store</a>
-<a href="{% url 'user_store' %}">Contact</a>
+<a href="{% url 'user_home' %}" class="ml-2 mr-2 colr">Home</a>
+<a href="{% url 'user_store' %}" class="ml-2 mr-2 colr">Store</a>
+<a href="{% url 'user_store' %}" class="ml-2 mr-2 colr">Contact</a>
 </div>
 <div class="col-4">
 </div>
