--- a/mobile_store/templates/user_panel/cart.html
+++ b/mobile_store/templates/user_panel/cart.html
@@ -21,7 +21,7 @@
           <th>
             <a
               style="float: right; margin: 5px"
-              class="btn btn-success"
+              class="btn btn-secondary"
               href="{% url 'user_checkout' %}"
               >Checkout</a
             >
