--- a/mobile_store/templates/user_panel/checkout.html
+++ b/mobile_store/templates/user_panel/checkout.html
@@ -73,7 +73,7 @@
         <hr />
         <input
           id="form-button"
-          class="btn btn-success btn-block"
+          class="btn btn-secondary btn-block"
           type="submit"
           value="Continue"
         />
