--- a/mobile_store/templates/user_panel/home.html
+++ b/mobile_store/templates/user_panel/home.html
@@ -60,7 +60,7 @@
   </div>
                 </div>
                 </div>
-                <a class="btn btn-info text-center" href="">Predict</a>
+                <a class="btn btn-secondary text-center" href="">Predict</a>
                 </form>
 
 			</div>
