--- a/mobile_store/templates/user_panel/checkout.html
+++ b/mobile_store/templates/user_panel/checkout.html
@@ -83,7 +83,8 @@
     <br />
     <div class="box-element hidden" id="payment-info">
       <small>Paypal Options</small>
-	  <button id="make-payment">Make Payment</button>
+      <div id="paypal-button-container"></div>
+	  <!--<button id="make-payment">Make Payment</button>-->
     </div>
   </div>
 
@@ -111,6 +112,35 @@
     </div>
   </div>
 </div>
+
+<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD&disable-funding=credit"></script>
+
+  <script>
+        // Render the PayPal button into #paypal-button-container
+        paypal.Buttons({
+
+            // Set up the transaction
+            createOrder: function(data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: '88.44'
+                        }
+                    }]
+                });
+            },
+
+            // Finalize the transaction
+            onApprove: function(data, actions) {
+                return actions.order.capture().then(function(details) {
+                    // Show a success message to the buyer
+                    submitFormData()
+                });
+            }
+
+
+        }).render('#paypal-button-container');
+    </script>
 
 <script type="text/javascript">
 
@@ -140,10 +170,12 @@
       document.getElementById("form-button").classList.add("hidden");
       document.getElementById("payment-info").classList.remove("hidden");
     })
+    /*
 
 	document.getElementById('make-payment').addEventListener('click', function(e){
 		submitFormData()
 	})
+  */
    
    function submitFormData(){
 	   console.log('payment button clicked')
