--- a/mobile_store/templates/user_panel/base.html
+++ b/mobile_store/templates/user_panel/base.html
@@ -184,6 +184,16 @@
 
     <div class="container">{% block content %} {% endblock content %}</div>
 
+
+
+    <!--footer-->
+
+    <div class="jumbotron text-center bg-dark text-white" style="margin-bottom:0">
+    <h4>Copyright ©2021 All rights reserved | This template is made with by Ayan</h4>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui porro debitis delectus fuga officiis rerum laboriosam fugit, doloribus nesciunt, veritatis placeat quas sed modi maiores sunt repudiandae, magnam accusamus ullam.</p>
+
+  </div>
+
     <script src="{% static 'user/js/cart.js' %}"></script>
   </body>
 </html>
