--- a/mobile_store/templates/user_panel/base.html
+++ b/mobile_store/templates/user_panel/base.html
@@ -106,7 +106,44 @@
         <ul class="navbar-nav mr-auto">
          
               <div class="d-flex flex-row">
-  <div class="">
+
+</div>
+
+        </ul>
+
+        
+        
+    
+
+
+
+
+
+
+        
+        <div class="form-inline my-2 my-lg-0">
+          <a href="{% url 'user_cart' %}">
+            <img id="cart-icon" src="{% static 'images/cart.png' %}" />
+          </a>
+          <p id="cart-total">{{cartItems}}</p>
+
+       
+        </div>
+
+
+        <div class="form-inline my-2 my-lg-0 text-center">
+         <div class="d-flex flex-row">
+  <div class="ml-md-3"> 
+  <form  method="get" action="{% url 'user_search' %}">
+  
+  <input type="search" class="form-control" name="search"/> </div>
+
+
+  <div class="mr-3"> <button class="btn btn-danger" type="submit">Search</button></div>
+  
+  </form>
+</div>
+  <div class="form-inline my-2 my-lg-0">
 
    {% if user.is_authenticated %}
 
@@ -136,47 +173,11 @@
   
   
   </div>
-</div>
-
-        </ul>
-
-        
-        
-    
-
-
-
-
-
-
-        
-        <div class="form-inline my-2 my-lg-0">
-          <a href="{% url 'user_cart' %}">
-            <img id="cart-icon" src="{% static 'images/cart.png' %}" />
-          </a>
-          <p id="cart-total">{{cartItems}}</p>
 
        
-        </div>
-
-
-        <div class="form-inline my-2 my-lg-0 text-center">
-         <div class="d-flex flex-row">
-  <div class="ml-3"> 
-  <form  method="get" action="{% url 'user_search' %}">
-  
-  <input type="search" class="form-control" name="search"/> </div>
-
-
-  <div class=""> <button class="btn btn-danger" type="submit">Search</button></div>
-  
-  </form>
-</div>
-
        
-        </div>
 
-      </div>
+     
     </nav>
 
    
