--- a/mobile_store/static/user/css/style.css
+++ b/mobile_store/static/user/css/style.css
@@ -118,3 +118,15 @@ a{
 .im{
 	max-width: 30px;
 }
+
+.an{
+	color: white;
+}
+.an:hover{
+	
+	text-decoration: none;
+
+}
+.active{
+	text-decoration: overline !important;
+}
