--- a/mobile_store/templates/user_panel/base.html
+++ b/mobile_store/templates/user_panel/base.html
@@ -70,13 +70,16 @@
   <body>
 
 
-<div class="row bg-warning">
+<div class="row bg-warning p-1">
 <div class="col-4">
 </div>
 <div class="col-4 text-center">
-<a href="{% url 'user_home' %}" class="ml-2 mr-2 colr">Home</a>
-<a href="{% url 'user_store' %}" class="ml-2 mr-2 colr">Store</a>
-<a href="{% url 'user_store' %}" class="ml-2 mr-2 colr">Contact</a>
+{% url 'user_home' as user_home%}
+<a href="{% url 'user_home' %}" class="ml-2 mr-2 colr an {% if request.path == user_home %}active{% endif %}">Home</a>
+{% url 'user_store' as user_store%}
+<a href="{% url 'user_store' %}" class="ml-2 mr-2 colr an {% if request.path == user_store %}active{% endif %}">Store</a>
+{% url 'user_contact' as user_contact%}
+<a href="{% url 'user_store' %}" class="ml-2 mr-2 colr an {% if request.path == user_store %}active{% endif %}">Contact</a>
 </div>
 <div class="col-4">
 </div>
