--- a/mobile_store/templates/user_panel/base.html
+++ b/mobile_store/templates/user_panel/base.html
@@ -14,10 +14,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="{% static 'user/css/style.css' %}" />
-     <link rel="stylesheet" href="{% static 'user/css/style2.css' %}" />
+    <link rel="stylesheet" href="{% static 'user/css/style2.css' %}" />
+     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
 
     <script>
       var user = "{{request.user}}";
@@ -67,18 +69,7 @@
       console.log("cart", cart);
 
     </script>
-    <script src="{% static 'user/js/cart.js' %}"></script>
-    <script type="text/javascript">
-    (function(d, m){
-        var kommunicateSettings = 
-            {"appId":"kommunicate-support","popupWidget":true,"automaticChatOpenOnNavigation":true};
-        var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
-        s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
-        var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
-        window.kommunicate = m; m._globals = kommunicateSettings;
-    })(document, window.kommunicate || {});
-/* NOTE: Use webserver to view HTML files as the real-time update will not work if you directly open the HTML file in the browser. */
-</script>
+    
   </head>
   <body>
 
@@ -105,7 +96,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark  ">
-      <a class="navbar-brand" href="{% url 'user_home' %}">Ecom</a>
+      <a class="navbar-brand" href="{% url 'user_home' %}">AL Ecom.com</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -224,6 +215,6 @@
 
   </div>
 
-    
+   <script src="{% static 'user/js/cart.js' %}"></script>
   </body>
 </html>
